--- a/Marine_Keeper/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Marine_Keeper/en.lproj/MainStoryboard_iPhone.storyboard
@@ -112,6 +112,9 @@
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="stopNavigation:" destination="nPN-dm-bpz" eventType="touchUpInside" id="noW-fc-BaI"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3zY-bi-Wkh">
                                 <constraints>
@@ -232,6 +235,9 @@
         </class>
         <class className="bpTripViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/bpTripViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="stopNavigation:" candidateClass="UIButton"/>
+            </relationships>
         </class>
         <class className="bpViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/bpViewController.h"/>
